@@ -15,6 +15,10 @@ SET(BRANDING_PROJECT_MAINTAINER_NAME "Alexandr Topilski" CACHE STRING "Name of m
 SET(BRANDING_PROJECT_GITHUB_FORK "www.github.com/fastogt/fastonosql" CACHE STRING "Branding fork url for ${BRANDING_PROJECT_NAME}") #default
 SET(BRANDING_PROJECT_GITHUB_ISSUES "www.github.com/fastogt/fastonosql/issues" CACHE STRING "Branding issues url for ${BRANDING_PROJECT_NAME}") #default
 
+SET(BRANDING_PROJECT_FACEBOOK_LINK "www.facebook.com/profile.php?id=100010049712549" CACHE STRING "Facebook link for ${BRANDING_PROJECT_NAME}") #default
+SET(BRANDING_PROJECT_TWITTER_LINK "www.twitter.com/FastoNoSQL" CACHE STRING "Twitter link for ${BRANDING_PROJECT_NAME}") #default
+SET(BRANDING_PROJECT_GITHUB_LINK "www.github.com/fastogt/fastonosql" CACHE STRING "Github link for ${BRANDING_PROJECT_NAME}") #default
+
 SET(BRANDING_PROJECT_BREF_DESCRIPTION "Cross-platform open source Redis, Memcached, SSDB, LevelDB management tool."
     CACHE STRING "Bref description for ${BRANDING_PROJECT_NAME}")
 SET(BRANDING_PROJECT_COPYRIGHT "Copyright (C) 2014-2015 ${BRANDING_PROJECT_COMPANYNAME} All Rights Reserved."
@@ -37,6 +41,9 @@ SET(PROJECT_GITHUB_FORK ${BRANDING_PROJECT_GITHUB_FORK})
 SET(PROJECT_GITHUB_ISSUES ${BRANDING_PROJECT_GITHUB_ISSUES})
 SET(PROJECT_CHANGELOG_FILE ${BRANDING_PROJECT_CHANGELOG_FILE})
 SET(PROJECT_BUILD_TYPE_VERSION ${BRANDING_PROJECT_BUILD_TYPE_VERSION})
+SET(PROJECT_FACEBOOK_LINK ${BRANDING_PROJECT_FACEBOOK_LINK})
+SET(PROJECT_TWITTER_LINK ${BRANDING_PROJECT_TWITTER_LINK})
+SET(PROJECT_GITHUB_LINK ${BRANDING_PROJECT_GITHUB_LINK})
 ##########################################################
 
 STRING(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWERCASE)
@@ -65,6 +72,7 @@ OPTION(BUILD_WITH_SSDB "Build with SSDB support" ON)
 OPTION(BUILD_WITH_LEVELDB "Build with SSDB support" ON)
 OPTION(BUILD_WITH_ROCKSDB "Build with RocksDB support" ON)
 
+OPTION(BUILD_WITH_SOCIAL_BUTTONS "Build with social buttons" ON)
 OPTION(GENERATE_TRANSLATIONS "Generate ts-files for ${PROJECT_NAME}" OFF)
 OPTION(USE_CXX_STANDART "Enable tests for ${PROJECT_NAME} project" ON)
 OPTION(QT_ENABLED "Enable Qt support" ON)
@@ -232,6 +240,15 @@ ADD_DEFINITIONS(-DPROJECT_BUILD_TYPE_VERSION="${PROJECT_BUILD_TYPE_VERSION}" -DP
 IF(PROJECT_BUILD_TYPE_VERSION STREQUAL "release")
     ADD_DEFINITIONS(-DPROJECT_BUILD_RELEASE)
 ENDIF(PROJECT_BUILD_TYPE_VERSION STREQUAL "release")
+
+IF(BUILD_WITH_SOCIAL_BUTTONS)
+ADD_DEFINITIONS(
+        -DBUILD_WITH_SOCIAL_BUTTONS
+        -DPROJECT_FACEBOOK_LINK="${PROJECT_FACEBOOK_LINK}"
+        -DPROJECT_TWITTER_LINK="${PROJECT_TWITTER_LINK}"
+        -DPROJECT_GITHUB_LINK="${PROJECT_GITHUB_LINK}"
+)
+ENDIF(BUILD_WITH_SOCIAL_BUTTONS)
 
 ADD_SUBDIRECTORY(src)
 
