@@ -9,4 +9,7 @@
 -DBRANDING_PROJECT_DOMAIN:STRING=www.fastoredis.com 
 -DBRANDING_PROJECT_GITHUB_FORK:STRING=www.github.com/fastogt/fastoredis 
 -DBRANDING_PROJECT_GITHUB_ISSUES:STRING=www.github.com/fastogt/fastoredis/issues 
+-DBRANDING_PROJECT_FACEBOOK_LINK:STRING=www.facebook.com/profile.php?id=100004938436506
+-DBRANDING_PROJECT_TWITTER_LINK:STRING=www.twitter.com/FastoRedis
+-DBRANDING_PROJECT_GITHUB_LINK:STRING=www.github.com/fastogt/fastoredis 
 -DBRANDING_PROJECT_CHANGELOG_FILE:STRING=../fastoredis_changelog.txt 
