@@ -58,7 +58,6 @@ namespace fastonosql
         QSplitter* splitter = new QSplitter;
         splitter->setOrientation(Qt::Horizontal);
         splitter->setHandleWidth(1);
-        splitter->setContentsMargins(0, 0, 0, 0);
 
         treeButton_ = new QPushButton;
         tableButton_ = new QPushButton;
