@@ -1,5 +1,10 @@
 <RCC>
     <qresource prefix="/">
+    <file>@PROJECT_NAME_LOWERCASE@/images/64x64/facebook.png</file>
+    <file>@PROJECT_NAME_LOWERCASE@/images/64x64/twitter.png</file>
+    <file>@PROJECT_NAME_LOWERCASE@/images/64x64/github.png</file>
+    <file>@PROJECT_NAME_LOWERCASE@/images/64x64/homepage.png</file>
+
     <file>@PROJECT_NAME_LOWERCASE@/images/64x64/open.png</file>
     <file>@PROJECT_NAME_LOWERCASE@/images/64x64/add.png</file>
     <file>@PROJECT_NAME_LOWERCASE@/images/64x64/remove.png</file>
